fix issue with overflow

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,5 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+tbody{
+  
+}
+
 
 
